--- a/index.html
+++ b/index.html
@@ -7,12 +7,49 @@
   <title>Ahmed Al-Naib</title>
 </head>
 <body>
-  <section>
-    <div>
-      <h1>Hi, I'm Ahmed Al-Naib</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
-      <a href="#">Link</a>
+  <section class="s1">
+    <div class="main-container">
+      <div class="greeting-grid">
+        <h1>Hi, I'm Ahmed Al-Naib</h1>
+      </div>
+
+      <div class="intro-grid">
+        <div class="nav-wrapper">
+          nav
+        </div>
+        <div class="left-column">
+          left
+        </div>
+        <div class="right-column">
+          left
+        </div>
+      </div>
+     
     </div>
   </section>
+  <!-- start new section -->
+  <section class="s2">
+    <div class="main-container">
+     about
+    </div>
+  </section>
+
+
+    <!-- start new section -->
+    <section class="s1">
+      <div class="main-container">
+      protfolio
+      </div>
+    </section>
+
+        <!-- start new section -->
+        <section class="s2">
+          <div class="main-container">
+        contact
+          </div>
+        </section>
+
+
+
 </body>
 </html>
