--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 
       <div class="intro-grid">
         <div class="nav-wrapper">
-          nav
+          <div class="flex-dot">
+            <div id="dot-1" class="dot"></div>
+            <div id="dot-2" class="dot"></div>
+            <div id="dot-3" class="dot"></div>
+          </div>
+          <ul>
+           <li><a href="#">Contact</a></li>
+           <li><a href="#">Contact</a></li>
+           <li><a href="#">Contact</a></li>
+          </ul>
         </div>
         <div class="left-column">
           left
